# gepa_pipeline

./: .agentmemory-project  .env.agentmemory  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CURSOR.md  GEMINI.md  README.md  TASK.md  pipeline.sh  pyproject.toml
.claude/: migration-summary.md  settings.json
.cursor/: mcp.json
.github/: copilot-instructions.md
data/: seed_prompt.txt  test.csv  train.csv  val.csv
scripts/: build_simple_aime.py
src/: constants.py  data_analysis.py  optimization.py  utils.py
