[project]
name = "prompt-gepa"
version = "0.1.0"
description = "Prompt optimization pipeline using GEPA framework with local Ollama models"
requires-python = ">=3.10"
dependencies = [
    "gepa>=0.1.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[tool.uv]
# Install extras if needed: uv sync --extra dev
dev-dependencies = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
