[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-gepa"
version = "0.1.0"
description = "Prompt optimization pipeline using GEPA framework with local Ollama models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GEPA Contributors" }
]
keywords = ["prompt-optimization", "llm", "gepa", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gepa>=0.1.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.urls]
Repository = "https://github.com/yourusername/prompt-gepa"
Documentation = "https://github.com/yourusername/prompt-gepa#readme"
"Bug Tracker" = "https://github.com/yourusername/prompt-gepa/issues"

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
enable_error_code = ["ignore-without-code"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
